# domin8-ton

./: .aidigestignore  .dockerignore  .gitignore  .vercelignore  Anchor.toml  CHARACTER_SYNC.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DEBUG_JOIN_LOBBY_FIX.md  Dockerfile  MAP_SPAWN_GUIDE.md  PHASE_4_ERROR_HANDLING.md  README.md  assetlinks.json  debug-wallet.js  index.html  local.properties  manifest-checksum.txt  nginx.conf  nixpacks.toml  package.json  test-privy-wallet.js  test-quick.js  twa-manifest.json  vite.config.ts
.well-known/: assetlinks.json
contracts/: jest.config.js  package.json  tact.config.json  tsconfig.json
convex/: botConfigurations.ts  botExecutor.ts  botPurchases.ts  characters.ts  chat.ts  constants.ts  crons.ts  currentGameParticipants.ts  debug.ts  email.ts  gameScheduler.ts  gameSchedulerMutations.ts  http.ts  lobbies.ts  lobbiesActions.ts  maps.ts  nftHolderScanner.ts  notifications.ts  players.ts  presenceBot.ts  presenceBotMutations.ts  pushSubscriptions.ts  referrals.ts  schema.ts  stats.ts  syncService.ts  syncServiceMutations.ts  xpConstants.ts
docs/: 1V1_new_plan.md  MagicBlock-migration.md  magicBlock-convex-frontend-plan.md  shareBtn_PrivateLobbies-plan.md
nft-collection/: collection-info.json  minted-nft.json
programs/domin8_1v1_prgm/: Cargo.toml
programs/domin8_1v1_prgm/src/: error.rs  lib.rs  state.rs  utils.rs
programs/domin8_1v1_prgm/src/instructions/: create_lobby.rs  initialize_config.rs  join_lobby.rs  mod.rs  rescue_lobby.rs  settle_lobby.rs  vrf_callback.rs
public/: manifest.json  site.webmanifest  (+1 more)
seed/: maps.json  (+1 more)
(+223 files in other folders)
